test/type/wrong/hr4.kk.out
test/type/wrong/hr4.kk(1,11): error: unannotated parameters cannot be polymorphic
 context : fun wrong(x) {
 (x : list<forall<a> a -> a>)
 }
 term : x
 inferred type: list<forall<a> (a) -> a>
 hint : annotate the parameter with a polymorphic type