test/type/wrong/hr4.kk
function wrong(x) {
  (x : list<forall<a> a -> a>)
}